crates/wdl-ast/tests/validation/duplicate-meta/source.errors
error: task `t` contains a duplicate metadata section
   ┌─ tests/validation/duplicate-meta/source.wdl:10:5
   │
 6 │     meta {
   │     ---- first metadata section is defined here
   ·
10 │     meta {
   │     ^^^^ this metadata section is a duplicate

error: workflow `w` contains a duplicate metadata section
   ┌─ tests/validation/duplicate-meta/source.wdl:35:5
   │
31 │     meta {
   │     ---- first metadata section is defined here
   ·
35 │     meta {
   │     ^^^^ this metadata section is a duplicate

error: struct `X` contains a duplicate metadata section
   ┌─ tests/validation/duplicate-meta/source.wdl:47:5
   │
43 │     meta {
   │     ---- first metadata section is defined here
   ·
47 │     meta {
   │     ^^^^ this metadata section is a duplicate

